added top wallet scrapper for eth and usdt

--- a/notebooks/notebook_btc.ipynb
+++ b/notebooks/notebook_btc.ipynb
@@ -569,7 +569,7 @@
     }
    ],
    "source": [
-    "top_wallets = get_top_wallets()\n",
+    "top_wallets = get_top_wallets_btc()\n",
     "top_wallets"
    ]
   },
@@ -5396,9 +5396,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
